omni/tests/goldens/types/unknown_type_25.err
tests/goldens/types/unknown_type_25.omni:1:13: error: unknown type "Mystery25"
  let value25:Mystery25 = 1
              ^~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_25.omni:1:1: error: cannot assign int to Mystery25
  let value25:Mystery25 = 1
  ^~~ hint: adjust the expression or type annotation
